--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@ body{
     font-family: 'Dune Rise','Michroma',sans-serif;
     overflow-x: hidden;
     background-color: #2c2c2c;
+   
+}
+html{
+     scroll-behavior: smooth;
 }
 ul{
     list-style: none;
