--- a/css/style.css
+++ b/css/style.css
@@ -51,9 +51,10 @@ header .container .navbar .list{
     transition: color 1s ease, transform 0.5s ease;
 }
 header .container .navbar .list:hover{
-    color: #000000; /* altın rengi örnek */
-    transform: scale(1.03); /* çok hafif büyüme */
+    color: #000000; 
+    transform: scale(1.03);
 }
+
 header .container .navbar .list .list-link{
     color: #000000;
   font-weight: bold;
@@ -87,11 +88,11 @@ header .container .navbar .list .sign_btn:hover{
     background-color: #b9a054;
     color: white;
 }
-main .hero .container img {
+/* main .hero .container img {
   width: 100vw;
   height: 100vh;
   object-fit: cover;
-}
+} */
 
 /*  VİDEO */
 main .hero{
@@ -198,6 +199,7 @@ main .card-nav .container .card-list .card-item .card-link .overlay{
 main .card-nav .container .card-list .card-item .card-link img{
     display: block;
     width: 100%;
+    height: 900px;
 }
 main .card-nav .container .card-list .card-item .card-link:hover .card-content{
     opacity: 1;
