--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,9 @@ main .hero .container .video-bg{
     width: 100vw;
     height: 100vh;
 }
+main .hero .container .mobile-hero{
+    display: none;
+}
 /* VIDEO end */
 main{
     background: linear-gradient(145deg, #0e0e0e, #2c2c2c, #0a0a0a);
@@ -171,6 +174,7 @@ main .card-nav .container .card-list .card-item .card-link{
     display: inline-block;
     overflow: hidden;
     transition: color 0.7s ease;
+    width: 100%;
 }
 main .card-nav .container .card-list .card-item .card-link .card-content{
     position: absolute;
@@ -199,7 +203,7 @@ main .card-nav .container .card-list .card-item .card-link .overlay{
 }
 main .card-nav .container .card-list .card-item .card-link img{
     display: block;
-    width: 355px;
+    width: 100%;
     height: 900px;
 }
 main .card-nav .container .card-list .card-item .card-link:hover .card-content{
@@ -246,28 +250,20 @@ footer .container{
     justify-content: center;
 }
 footer .container .footer-content{
-   margin: 50px;
+   margin: 0;
    display: flex;
    justify-content: space-between;
-   flex-direction: column;
+   flex-direction: row;
+   width: 100%;
+   padding: 30px;
 }
 footer .container .footer-content .footer-head{
     color:#C2B280;
     text-align: center;
     font-size: 28px;
-}
-footer .container .footer-content .footer-para{
-    color:#C2B280;
-    font-family: 'Michrome';
-    font-size: 24px;
-}
-footer .footer-date{
-    color: white;
-    display: block;
-    text-align: end;
-    font-size: 12px;
-    margin-right: 20px;
-    padding-bottom: 30px;
+    margin: 0;
+    display: inline-block;
+    width: 100%;
 }
 
 @media (max-width: 768px) {
@@ -301,5 +297,12 @@ main .forum .container .forum-content .content-head{
 }
 main .forum .container .forum-content .content-para{
     font-size: 16px;
+}
+main .hero .video-bg{
+    display: none;
+}
+main .hero .container .mobile-hero{
+    display: block;
+    object-fit: cover;
 }
 }
